--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "4.26.1",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.21.1",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@tanstack/react-query": "5.8.1",
     "@tanstack/react-query-devtools": "5.8.1",
     "axios": "1.6.1",
@@ -37,7 +38,7 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
