upd: Updated .env.dist

--- a/dist.env
+++ b/dist.env
@@ -30,3 +30,10 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/chat
 
 # OpenAI
 OPENAI_API_KEY=...
+
+# Unsplash
+# https://unsplash.com/oauth/applications/668219
+# https://api.unsplash.com/search/photo?cleint_id=${process.envUNSPLASH_API_KEY}&query=
+UNSPLASH_ID=...
+UNSPLASH_ACCESS_KEY=...
+UNSPLASH_SECRET_KEY=...
