--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "standard",
     "prettier",
     "plugin:prettier/recommended"
+    // plugin:jsx-a11y/recommended
   ],
   "rules": {
     "jsx-a11y/anchor-has-content": "off",
